2001-11-xx- v0.15.3:
  * Print info line about each file before beginning retrieval.
  * Fix slow exit with very large midinfo files.
  * In -T mode, only print x/y parts if the post is incomplete, otherwise just print x.

2001-11-24 - v0.15.2:
  * Fix -df with filenames that begin or end in "non-word" chars since the \< and \> will not match because there is no word boundry in such a case. (reported by Bernhard Josef Rieder)
  * Added LDFLAGS arg in Makefile to facilitate building with fink. (Thomas Kotzian)
  * Support systems that don't have sstream, but do have the older strstream. (Thomas Kotzian, me)
  * Added dupe checking between successive downloads.  Avoids grabbing the same file twice in the same run.
  * Fix undefined reference to cur_term link error that was showing up on some systems.
  * Removed autoconf check for select function that when tested with g++ >=2.96 would always report the function to be not found, due to a bug in autoconf 2.5.  IF you actually don't have select, comment out the HAVE_SELECT in sockstuff.cc.

2001-11-07 - v0.15.1:
  * Fix linking when there is no libtermcap but there is curses or ncurses. (Reported by Erik-Jan Vlieger)
  * Fix hang after fatal error on article retrieval. (Reported by Lance Simmons)

2001-11-01 - v0.15:
  * Fixes for gcc 3.0 compilation.
  * Print time remaining in XhXXmXXs format, rather than XXXXs.
  * Use termcap for clearing progress lines, fixes problems with chars getting left at the end.
  * Use 64bit int for total bytes/lines if available.  Fixes negative/weird time left displays for large queues. 
  * Make timeout a config option.
  * Add manpage for ngetlite.
  * No longer attempt to set user/group in make install.
  * Add messageid (mid) keyword to -R expressions.
  * Add more documentation of win32 build/usage.
  * Error on retrieving headers will retry and try other servers instead of giving up.
  * Errors other than "article not available" on retrieving articles are handled correctly.