@@ -8,7 +8,7 @@ complete=1
 dupeidcheck=1
 dupefilecheck=1
 dupefilemark=0
-limit=3
+limit=0
 quiet=0
 debug=0
 tempshortnames=0
